argocd/applications/mgmt/services/pihole/hostport.yaml
# hostport.yaml (after)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole    # do not set namespace here – it breaks matching
spec:
  template:
    spec:
      containers:
      - name: pihole
        ports:
          - name: dns
            containerPort: 53
            protocol: TCP
            hostPort: 53
          - name: dns-udp
            containerPort: 53
            protocol: UDP
            hostPort: 53
